# zkc-fixes

./: .build.yml  .gitignore  README.md  meson.build
.builds/: alpine.yml  freebsd.yml
include/: app.h
src/: app.c  main.c
